--- a/files/nix/home-manager/programs/aerospace/aerospace.toml
+++ b/files/nix/home-manager/programs/aerospace/aerospace.toml
@@ -60,7 +60,7 @@ inner.horizontal = 4
 inner.vertical =   4
 outer.left =       4
 outer.bottom =     4
-outer.top =        [{monitor.main = 36 }, { monitor.secondary = 0 }, 36]
+outer.top =        [{monitor.main = 36 }, { monitor."^built-in retina display$" = 0 }, 36]
 outer.right =      4
 
 # 'main' binding mode declaration
@@ -78,7 +78,7 @@ outer.right =      4
 7 = 'main'
 8 = 'main'
 9 = 'main'
-10 = 'secondary'
+10 = '^built-in retina display$'
 
 [mode.main.binding]
 
