--- a/files/nix/nvfetcher.toml
+++ b/files/nix/nvfetcher.toml
@@ -13,3 +13,8 @@ fetch.url = "https://get.videolan.org/vlc/$ver/macosx/vlc-$ver-arm64.dmg"
 [meetingbar]
 src.github = "leits/MeetingBar"
 fetch.url = "https://github.com/leits/MeetingBar/releases/download/$ver/MeetingBar.dmg"
+
+[scroll-reverser]
+src.github_tag = "pilotmoon/Scroll-Reverser"
+src.prefix = "v"
+fetch.url = "https://github.com/pilotmoon/Scroll-Reverser/releases/download/v$ver/ScrollReverser-$ver.zip"
