--- a/files/nix/home-manager/programs/aquaskk/keymap.conf
+++ b/files/nix/home-manager/programs/aquaskk/keymap.conf
@@ -29,7 +29,7 @@ ToggleJisx0201Kana	ctrl::q
 SwitchToAscii		l
 SwitchToJisx0208Latin	L
 
-# EnterAbbrev		/
+EnterAbbrev		/
 EnterJapanese		Q
 NextCompletion		.
 PrevCompletion		,
