--- a/packages.toml
+++ b/packages.toml
@@ -9,7 +9,7 @@ type = "basic"
 common = [
   { name = "nix", method = "script", function = "setup_nix" },
   { name = "nix-index", method = "nix-hm" },
-  { name = "nvfetcher", method = "nix-hm" },
+  # { name = "nvfetcher", method = "nix-hm" },
 ]
 [direnv]
 type = "basic"
@@ -175,7 +175,7 @@ common = [{ name = "ssh_config", method = "nix-hm" }]
 [openssl]
 type = "basic"
 arch = [{ name = "openssl", method = "pacman" }]
-darwin = [{ name = "openssl_3_2", method = "nix-hm" }]
+darwin = [{ name = "openssl", method = "nix-hm" }]
 ubuntu = [{ name = "openssl", method = "apt" }]
 
 [gnupg]
