--- a/files/nix/home-manager/programs/aerospace/aerospace.toml
+++ b/files/nix/home-manager/programs/aerospace/aerospace.toml
@@ -112,10 +112,10 @@ alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-h = 'focus left'
-alt-j = ['focus down', 'focus-monitor down']
-alt-k = ['focus up', 'focus-monitor up']
-alt-l = 'focus right'
+alt-h = 'focus --boundaries all-monitors-outer-frame left'
+alt-j = 'focus --boundaries all-monitors-outer-frame down'
+alt-k = 'focus --boundaries all-monitors-outer-frame up'
+alt-l = 'focus --boundaries all-monitors-outer-frame right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 alt-shift-h = 'move left'
