--- a/packages.toml
+++ b/packages.toml
@@ -59,7 +59,11 @@ common = [{ name = "gawk", method = "nix" }]
 
 [less]
 type = "basic"
-common = [{ name = "less", method = "nix" }]
+common = [
+  { name = "less", method = "nix-hm" },
+  { name = "lesspipe", method = "nix-hm" }
+]
+nixos = [{ name = "less", method = "nix" }]
 
 [tree]
 type = "basic"
