Add pre-commit support and remove git-secrets
Introduced pre-commit hooks by adding a new configuration file for
pre-commit, enabling automatic checks for common issues. Removed the
git-secrets implementation, including its configuration and related
hooks. Updated the package list to include pre-commit and gitleaks
instead of git-secrets. Added a cheat sheet for pre-commit commands to
assist users in utilizing the new setup.

--- a/packages.toml
+++ b/packages.toml
@@ -119,7 +119,8 @@ common = [
 type = "basic"
 common = [
   { name = "git", method = "nix-hm" },
-  # { name = "git-secrets", method = "nix-hm" },
+  { name = "pre-commit", method = "nix-hm" },
+  { name = "gitleaks", method = "nix-hm" },
 ]
 
 [sheldon]
