Refactor Emacs configurations and update pre-commit hooks
Removed the end-of-file-fixer hook from the pre-commit
configuration. Updated the Emacs README with improved eglot server
program settings for `nix-mode` and `markdown-mode`. Added eglot
support for `yaml-ts-mode` and `toml-ts-mode`, ensuring the respective
language servers are set correctly. Introduced a new entry for
`yaml-language-server` in the packages.toml file for better language
support.

--- a/packages.toml
+++ b/packages.toml
@@ -291,6 +291,11 @@ common = [{ name = "nixd", method = "nix-hm" }]
 type = "dev"
 common = [{ name = "nixfmt-rfc-style", method = "nix-hm" }]
 
+## for yaml
+[yaml-language-server]
+type = "dev"
+common = [{ name = "yaml-language-server", method = "nix-hm" }]
+
 ## python
 [python]
 type = "dev"
