--- a/files/nix/home-manager/programs/aerospace/aerospace.toml
+++ b/files/nix/home-manager/programs/aerospace/aerospace.toml
@@ -72,8 +72,8 @@ outer.right =      4
 1 = 'main'
 2 = 'main'
 3 = 'main'
-4 = '^built-in retina display$'
-5 = '^built-in retina display$'
+4 = ['secondary', 'main']
+5 = ['secondary', 'main']
 6 = 'main'
 # 7 = '^built-in retina display$'
 # 8 = '^built-in retina display$'
