--- a/files/nix/home-manager/programs/zsh/sheldon/plugins.toml
+++ b/files/nix/home-manager/programs/zsh/sheldon/plugins.toml
@@ -34,7 +34,7 @@ bindkey '\t' menu-select \"$terminfo[kcbt]\" menu-select
 bindkey -M menuselect '\t' menu-complete \"$terminfo[kcbt]\" reverse-menu-complete
 bindkey '^N' history-beginning-search-forward
 bindkey '^P' history-beginning-search-backward
-bindkey -M emacs '^R' .fzf-history-widget
+bindkey -M emacs '^R' fzf-history-widget
 
 zstyle ':completion:*' completer _complete _complete:-fuzzy _correct _approximate _ignored
 
