--- a/packages.toml
+++ b/packages.toml
@@ -225,6 +225,13 @@ arch = [{ name = "gnupg", method = "pacman" }]
 ubuntu = [{ name = "gnupg", method = "apt" }]
 common = [{ name = "gnupg", method = "nix-hm" }]
 
+[sops]
+type = "basic"
+common = [
+  { name = "sops", method = "nix-hm" },
+  { name = "age", method = "nix-hm" }
+]
+
 [macos-security]
 type = "basic"
 darwin = [
@@ -379,6 +386,11 @@ common = [{ name = "awscli2", method = "nix-hm" }]
 type = "dev"
 linux = [{ name = "docker-conf", method = "nix-hm" }]
 
+# podman for build/push
+[podman]
+type = "dev"
+linux = [{ name = "podman", method = "nix-hm" }]
+
 ## kubernetes
 [kubectl]
 type = "dev"
@@ -386,6 +398,9 @@ common = [{ name = "kubectl", method = "nix-hm" }]
 [k9s]
 type = "dev"
 common = [{ name = "k9s", method = "nix-hm" }]
+[flux]
+type = "dev"
+common = [{ name = "fluxcd", method = "nix-hm" }]
 
 # gui packages
 ## tex
