--- a/packages.toml
+++ b/packages.toml
@@ -100,6 +100,13 @@ common = [
   { name = "unzip", method = "nix-hm" },
 ]
 
+[tar]
+type = "basic"
+common = [
+  { name = "gnutar", method = "nix-hm" },
+  { name = "zstd", method = "nix-hm" },
+]
+
 [unarchiver]
 type = "basic"
 common = [{ name = "unar", method = "nix" }]
