Add file package
Adds the 'file' package to be managed by nix-hm.

--- a/packages.toml
+++ b/packages.toml
@@ -115,6 +115,10 @@ common = [{ name = "unar", method = "nix" }]
 type = "basic"
 common = [{ name = "gtrash", method = "nix-hm" }]
 
+[file]
+type = "basic"
+common = [{ name = "file", method = "nix-hm" }]
+
 [tmux]
 type = "basic"
 common = [
